Add code coverage to the .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ install:
 
 script: phpunit -c phpunit.xml.dist --coverage-clover=coverage.clover
 
-#after_script:
-#    - wget https://scrutinizer-ci.com/ocular.phar
-#    - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+after_script:
+    - wget https://scrutinizer-ci.com/ocular.phar
+    - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
