Check out the PHPUnit version

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,9 @@ matrix:
 install:
     - composer install
 
-script: phpunit -c phpunit.xml.dist --coverage-clover=coverage.clover
+script:
+    - phpunit --version
+    - phpunit -c phpunit.xml.dist --coverage-clover=coverage.clover
 
 after_script:
     - wget https://scrutinizer-ci.com/ocular.phar
