--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,10 @@ matrix:
 
 install:
     - composer install
+    - composer require phpunit/phpunit ~5
 
 script:
-    - phpunit --version
-    - phpunit -c phpunit.xml.dist --coverage-clover=coverage.clover
+    - ./vendor/bin/phpunit -c phpunit.xml.dist --coverage-clover=coverage.clover
 
 after_script:
     - wget https://scrutinizer-ci.com/ocular.phar
