Switch to PHP 7

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,15 @@ dist: trusty
 language: php
 
 php:
-    - 7.0
     - 7.1
     - 7.2
+    - nightly
 
 sudo: false
 
 matrix:
+    allow_failures:
+        - php: nightly
     fast_finish: true
 
 install:
