--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,11 @@
 			"email": "todd@vanillaforums.com"
 		}
 	],
+	"config": {
+		"platform": {
+			"php": "7.0.26"
+		}
+	},
 	"require": {
 		"php": ">=5.6.0"
 	},
@@ -21,5 +26,8 @@
 		"psr-4": {
 			"Garden\\Schema\\Tests\\": "tests"
 		}
+	},
+	"require-dev": {
+		"phpunit/phpunit": "^6"
 	}
 }
