--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
 	],
 	"config": {
 		"platform": {
-			"php": "7.0.26"
+			"php": "8.0"
 		}
 	},
 	"require": {
-		"php": ">=5.6.0"
+		"php": ">=8.0"
 	},
 	"autoload": {
 		"psr-4": {
@@ -28,6 +28,6 @@
 		}
 	},
 	"require-dev": {
-		"phpunit/phpunit": "^6"
+		"phpunit/phpunit": "~9.0"
 	}
 }
