--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
 	],
 	"require": {
 		"php": ">=8.1",
-		"ramsey/uuid": "^4.9"
+		"ramsey/uuid": "^4.9",
+		"vanilla/garden-utils": "^1.0"
 	},
 	"autoload": {
 		"psr-4": {
