--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
 		}
 	],
 	"require": {
-		"php": ">=8.1"
+		"php": ">=8.1",
+		"ramsey/uuid": "^4.9",
+		"vanilla/garden-utils": "^1.0"
 	},
 	"autoload": {
 		"psr-4": {
